# github-action-playground

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: action-build.yml  action-release.yml  action-test.yml  docker-build.yml  dummy.yml
apps/: CMakeLists.txt  stm32f407zg_main.cpp  stm32f407zg_startup.s
apps/dummy0/: CMakeLists.txt
apps/dummy0/STM32F407ZG/: linker.ld  startup.s
apps/dummy1/: CMakeLists.txt  main.cpp
apps/dummy1/STM32F407VG/: linker.ld
cmake/: arm-gcc-toolchain.cmake
docs/: CHANGELOG_v0.0.1.md
include/: dummy.hpp
protos/: dummy.proto
src/: CMakeLists.txt  dummy.cpp
test/: CMakeLists.txt  dummy_message_test.cpp  dummy_test.cpp  system_test.cpp
